[package]
name = "nearn_ft"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
dotenv = "0.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.28"
near-api = "0.6.1"
near-sdk = "5.17.2"
serde = "1.0.228"
utoipa = "5.4.0"
utoipa-actix-web = "0.1.2"
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
redis = { version = "0.32.7", features = ["tokio-comp"] }
serde_json = "1.0.145"
