[package]
name = "nearn_ft"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", features = ["rustls-0_23"] }
rustls = "0.23"
rustls-pemfile = "2"
dotenv = "0.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.28"
near-api = "0.6.1"
near-sdk = "5.17.2"
serde = "1.0.228"
utoipa = "5.4.0"
utoipa-actix-web = "0.1.2"
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web","reqwest"] }
redis = { version = "0.32.7", features = ["r2d2", "tokio-comp"] }
serde_json = "1.0.145"
toml = "0.9.8"
tokio = { version = "1", features = ["sync", "time"] }
near-primitives = "0.32.0"
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
deadpool-redis = { version = "0.22.0", features = ["rt_tokio_1"] }
