[package]
name = "ft-load-tester"
version = "0.1.0"
edition = "2024"


[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
indicatif = "0.17" # For a nice progress bar
log = "0.4"
env_logger = "0.11"
futures = "0.3.31"
